# CrewAI-Practice

./: README.md
student_guide_flow/: README.md  pyproject.toml  report.md
student_guide_flow/output/: academics_report.md  finance_report.md  opportunity_report.md  student_guide_report.md  well_being_report.md
student_guide_flow/src/student_guide_flow/: main.py
student_guide_flow/src/student_guide_flow/crews/academics_crew/: AcademicsCrew.py  README.md  pyproject.toml
student_guide_flow/src/student_guide_flow/crews/academics_crew/config/: agents.yaml  tasks.yaml
student_guide_flow/src/student_guide_flow/crews/academics_crew/src/academics_crew/: crew.py
student_guide_flow/src/student_guide_flow/crews/finance_crew/: FinanceCrew.py  README.md  pyproject.toml
student_guide_flow/src/student_guide_flow/crews/finance_crew/config/: agents.yaml  tasks.yaml
student_guide_flow/src/student_guide_flow/crews/finance_crew/src/finance_crew/: crew.py
student_guide_flow/src/student_guide_flow/crews/opportunity_crew/: OpportunityCrew.py  README.md  pyproject.toml
student_guide_flow/src/student_guide_flow/crews/opportunity_crew/config/: tasks.yaml
student_guide_flow/src/student_guide_flow/crews/opportunity_crew/knowledge/: user_preference.txt
student_guide_flow/src/student_guide_flow/crews/opportunity_crew/src/opportunity_crew/: crew.py
student_guide_flow/src/student_guide_flow/crews/opportunity_crew/src/opportunity_crew/config/: agents.yaml
student_guide_flow/src/student_guide_flow/crews/well_being_crew/: README.md  WellBeingCrew.py  pyproject.toml
student_guide_flow/src/student_guide_flow/crews/well_being_crew/config/: agents.yaml  tasks.yaml
student_guide_flow/src/student_guide_flow/crews/well_being_crew/src/well_being_crew/: crew.py
