[project]
name = "student_guide_flow"
version = "0.1.0"
description = "student_guide_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
kickoff = "student_guide_flow.main:kickoff"
run_crew = "student_guide_flow.main:kickoff"
plot = "student_guide_flow.main:plot"
run_with_trigger = "student_guide_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
