[project]
name = "academics_crew"
version = "0.1.0"
description = "academics_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
academics_crew = "academics_crew.main:run"
run_crew = "academics_crew.main:run"
train = "academics_crew.main:train"
replay = "academics_crew.main:replay"
test = "academics_crew.main:test"
run_with_trigger = "academics_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
