[project]
name = "opportunity_crew"
version = "0.1.0"
description = "opportunity_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
opportunity_crew = "opportunity_crew.main:run"
run_crew = "opportunity_crew.main:run"
train = "opportunity_crew.main:train"
replay = "opportunity_crew.main:replay"
test = "opportunity_crew.main:test"
run_with_trigger = "opportunity_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
