[project]
name = "well_being_crew"
version = "0.1.0"
description = "well_being_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
well_being_crew = "well_being_crew.main:run"
run_crew = "well_being_crew.main:run"
train = "well_being_crew.main:train"
replay = "well_being_crew.main:replay"
test = "well_being_crew.main:test"
run_with_trigger = "well_being_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
